k8s/01-emptydir-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
  namespace: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      volumes:
      - name: emptydir-storage
        emptyDir: {}
      containers:
      - name: ubuntu-container
        image: ubuntu
        command: ["/bin/sh"]
        args: ["-c", "tail -f /dev/null"]
        volumeMounts:
        - name: emptydir-storage
          mountPath: /tmp/data
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      restartPolicy: Always
