k8s/02-hostpath-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
  namespace: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu-container
        image: ubuntu
        command: ["/bin/sh", "-c", "tail -f /dev/null"]
        volumeMounts:
        - name: hostpath-storage
          mountPath: /tmp/data
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
      volumes:
        - name: hostpath-storage
          hostPath:
            path: /tmp/k8sdata
            type: DirectoryOrCreate
