k8s/02-pod-ns-alpha.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: alpha
spec:
  containers:
  - name: myapp
    image: mkm30/ubi9-python3-12
    command: ['sh', '-c', 'echo IMAGE TEST && sleep 360']
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
