k8s/03-pod-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: labelpod
  labels:
    environment: staging
    tier: frontend
spec:
  containers:
  - name: labelcontainer
    image: nginx
    ports:
    - containerPort: 80
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
