k8s/05-deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: alpha
spec:
  replicas: 3
  selector:
    matchLabels:
      env: staging
      tier: frontend
  template:
    metadata:
      labels:
        env: staging
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
