k8s/05-deployment-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
  namespace: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu-pvc
        image: ubuntu
        command: ["/bin/sh", "-c", "tail -f /dev/null"]
        volumeMounts:
        - name: persistent-storage
          mountPath: /tmp/data
        volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: awsec2-pvc
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
        restartPolicy: Always
