k8s/05-dynamicdeployment-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
  namespace: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu-container
        image: ubuntu
        command: ["/bin/sh", "-c", "tail -f /dev/dull"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - name: persistent-storage
          mountPath: /tmp/data
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: ebs-claim
