k8s/10-deployment-ubuntu-hostname.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-deployment
  namespace: alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      hostname: ubuntu-hostname
      containers:
      - name: ubuntu
        image: ubuntu
        command: ["/bin/sh"]
        args: ["-c", "tail -f /dev/null"]
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
      restartPolicy: Always
