k8s/04-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: alpha
spec:
  type: NodePort
  selector:
    env: staging
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
      nodePort: 30080
